{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 180,
  "lineage": "caf6b554-1dc2-da22-7c58-3b96d20d4a87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0411854a1a3cae618",
            "arn": "arn:aws:ec2:ap-south-1:396913696471:elastic-ip/eipalloc-0411854a1a3cae618",
            "association_id": "eipassoc-05be921d00bf272f2",
            "domain": "vpc",
            "id": "eipalloc-0411854a1a3cae618",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-034252cd2e0766ecd",
            "private_dns": "ip-10-0-1-176.ap-south-1.compute.internal",
            "private_ip": "10.0.1.176",
            "public_dns": "ec2-13-204-23-3.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.23.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:internet-gateway/igw-0f38629876e40027d",
            "id": "igw-0f38629876e40027d",
            "owner_id": "396913696471",
            "tags": {
              "Name": "prefect-ecs-igw"
            },
            "tags_all": {
              "Name": "prefect-ecs-igw"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0411854a1a3cae618",
            "association_id": "eipassoc-05be921d00bf272f2",
            "connectivity_type": "public",
            "id": "nat-0af2536b00f4d0f0f",
            "network_interface_id": "eni-034252cd2e0766ecd",
            "private_ip": "10.0.1.176",
            "public_ip": "13.204.23.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f33080e6aa754b54",
            "tags": {
              "Name": "prefect-ecs-nat-gw"
            },
            "tags_all": {
              "Name": "prefect-ecs-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:route-table/rtb-0a8f682f3ab71ce4c",
            "id": "rtb-0a8f682f3ab71ce4c",
            "owner_id": "396913696471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af2536b00f4d0f0f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-private-rt"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:route-table/rtb-0329883eda57d78b3",
            "id": "rtb-0329883eda57d78b3",
            "owner_id": "396913696471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f38629876e40027d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prefect-ecs-public-rt"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0605d8154bf67dba5",
            "route_table_id": "rtb-0a8f682f3ab71ce4c",
            "subnet_id": "subnet-0bb733b3d8ec70a44"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0947382b9c420ec21",
            "route_table_id": "rtb-0a8f682f3ab71ce4c",
            "subnet_id": "subnet-05af3d2ed259a91e9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a8ee1180c743507",
            "route_table_id": "rtb-0a8f682f3ab71ce4c",
            "subnet_id": "subnet-09784411207a30c32"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067f6817ea5e83d2b",
            "route_table_id": "rtb-0329883eda57d78b3",
            "subnet_id": "subnet-0f33080e6aa754b54"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be8dae338db1ddb6",
            "route_table_id": "rtb-0329883eda57d78b3",
            "subnet_id": "subnet-056234c07db842c22"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfbedab44abb1c6e",
            "route_table_id": "rtb-0329883eda57d78b3",
            "subnet_id": "subnet-0d122ca908e53c769"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_3",
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:security-group/sg-0a11654c78e95289c",
            "description": "Allow all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a11654c78e95289c",
            "ingress": [],
            "name": "prefect-ecs-sg",
            "name_prefix": "",
            "owner_id": "396913696471",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-0bb733b3d8ec70a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb733b3d8ec70a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-1"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-05af3d2ed259a91e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05af3d2ed259a91e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-2"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-09784411207a30c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09784411207a30c32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-private-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-private-3"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-0f33080e6aa754b54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f33080e6aa754b54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-1"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-1"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-056234c07db842c22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056234c07db842c22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-2"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-2"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:subnet/subnet-0d122ca908e53c769",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d122ca908e53c769",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396913696471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prefect-ecs-public-3"
            },
            "tags_all": {
              "Name": "prefect-ecs-public-3"
            },
            "vpc_id": "vpc-07b6c639e35a2781e"
          },
          "dependencies": [
            "aws_vpc.prefect_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prefect_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:396913696471:vpc/vpc-07b6c639e35a2781e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05332b8420956ebbc",
            "default_route_table_id": "rtb-0d7ea48c98ef7e71f",
            "default_security_group_id": "sg-066a2435af11d92d7",
            "dhcp_options_id": "dopt-004286583751db5c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b6c639e35a2781e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7ea48c98ef7e71f",
            "owner_id": "396913696471",
            "tags": {
              "Name": "prefect-ecs-vpc"
            },
            "tags_all": {
              "Name": "prefect-ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}